crates/shipper-encrypt/src/snapshots/shipper_encrypt__snapshot_tests__config_with_both_passphrase_and_env_json.snap
---
source: crates/shipper-encrypt/src/lib.rs
expression: json
---
{
  "enabled": true,
  "passphrase": "inline-pass",
  "env_var": "SHIPPER_ENCRYPT_KEY"
}
