crates/shipper-encrypt/src/snapshots/shipper_encrypt__snapshot_tests__config_with_env_var_json.snap
---
source: crates/shipper-encrypt/src/lib.rs
expression: json
---
{
  "enabled": true,
  "env_var": "SHIPPER_ENCRYPT_KEY"
}
