crates/shipper-encrypt/src/snapshots/shipper_encrypt__snapshot_tests__config_with_passphrase_json.snap
---
source: crates/shipper-encrypt/src/lib.rs
expression: json
---
{
  "enabled": true,
  "passphrase": "my-secret"
}
