crates/shipper-encrypt/src/snapshots/shipper_encrypt__snapshot_tests__display_config_enabled_no_source.snap
---
source: crates/shipper-encrypt/src/lib.rs
expression: cfg.to_string()
---
encryption: enabled (no passphrase configured)
