crates/shipper-encrypt/src/snapshots/shipper_encrypt__snapshot_tests__display_config_with_env_var.snap
---
source: crates/shipper-encrypt/src/lib.rs
expression: cfg.to_string()
---
encryption: enabled (env: SHIPPER_ENCRYPT_KEY)
