crates/shipper-encrypt/src/snapshots/shipper_encrypt__snapshot_tests__display_config_with_passphrase.snap
---
source: crates/shipper-encrypt/src/lib.rs
expression: cfg.to_string()
---
encryption: enabled (passphrase: s**************y)
