crates/shipper-encrypt/src/snapshots/shipper_encrypt__snapshot_tests__display_state_encryption_wrapper.snap
---
source: crates/shipper-encrypt/src/lib.rs
expression: se.to_string()
---
encryption: enabled (passphrase: m***********e)
