crates/shipper-encrypt/src/snapshots/shipper_encrypt__snapshot_tests__error_corrupted_nonce_message.snap
---
source: crates/shipper-encrypt/src/lib.rs
expression: err.to_string()
---
decryption failed - wrong passphrase or corrupted data: Error
