crates/shipper-encrypt/src/snapshots/shipper_encrypt__snapshot_tests__error_empty_input.snap
---
source: crates/shipper-encrypt/src/lib.rs
expression: err.to_string()
---
encrypted data too short
