crates/shipper-encrypt/src/snapshots/shipper_encrypt__snapshot_tests__error_invalid_base64.snap
---
source: crates/shipper-encrypt/src/lib.rs
expression: err.to_string()
---
invalid base64 encoding
