crates/shipper-encrypt/src/snapshots/shipper_encrypt__snapshot_tests__mask_passphrase_normal.snap
---
source: crates/shipper-encrypt/src/lib.rs
expression: "mask_passphrase(\"my-secret-passphrase\")"
---
m******************e
