crates/shipper-encrypt/src/snapshots/shipper_encrypt__snapshot_tests__mask_passphrase_unicode.snap
---
source: crates/shipper-encrypt/src/lib.rs
expression: "mask_passphrase(\"🔑secret🔒\")"
---
🔑******🔒
